src/app/components/card/card.module.css
.container {
  height: 30rem;
  width: 20rem;
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
  position: relative;
}

.btnContainer {
  width: 100%;
  position: absolute;
  bottom: 0;
}

.discountBadge {
  position: absolute;
  right: 0;
  border-radius: 0.5rem;
  background-color: var(--discount);
  padding: 0.5rem;
  color: white;
  font-weight: 600;
}

.content {
  padding: 15px;
  border-radius: 12px;
  background-color: var(--card-background);
  margin-bottom: 10px;
}

.content:hover {
  cursor: pointer;
}

.imgContainer {
  margin: auto;
  height: 200px;
  width: 200px;
  border-radius: 12px;
}

.productName {
  padding: 10px;
  text-align: center;
  font-size: 18px;
  font-weight: 800;
}

.descriptionContainer {
  margin: 1rem;
  align-items: center;
}

.priceContainer {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  margin: 0.5rem;
}

.crossout {
  text-decoration: line-through;
}

.discountedPrice {
  color: var(--discount);
  font-weight: 700;
}

.text {
  text-align: center;
}

@media (max-width: 680px) {
  .container {
    height: auto;
    width: auto;
    margin-top: 1rem;
    margin-bottom: 1rem;
  }
}

